<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/keyboard_view"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/is_wild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is WildCard" />

        <Spinner
            android:id="@+id/operation_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.oakonell.findx.custom.widget.FractionEditText
                android:id="@+id/x2_coeff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none" >
            </com.oakonell.findx.custom.widget.FractionEditText>

            <TextView
                android:id="@+id/x2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x^2 + "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.oakonell.findx.custom.widget.FractionEditText
                android:id="@+id/x_coeff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none" >

                <requestFocus />
            </com.oakonell.findx.custom.widget.FractionEditText>

            <TextView
                android:id="@+id/x_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x + "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.oakonell.findx.custom.widget.FractionEditText
                android:id="@+id/constant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none" />
        </LinearLayout>

        <Button
            android:id="@+id/random_op"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/randomize" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" >
    </android.inputmethodservice.KeyboardView>

</RelativeLayout>