<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/keyboard_view"
        android:layout_alignParentTop="true"
        android:background="@raw/chalkboard"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/level_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8sp"
                    android:text="@string/level"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/level_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/level_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8sp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/min_moves_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8sp"
                    android:text="@string/minimum_moves" />

                <TextView
                    android:id="@+id/min_moves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11" />
            </LinearLayout>

            <include
                android:id="@+id/include1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/move" />

            <FrameLayout
                android:id="@+id/header_separator_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <include
                    android:id="@+id/include2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/move" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/start_equation_move"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <include
                    android:id="@+id/include2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/move" />
            </FrameLayout>

            <ListView
                android:id="@+id/moves"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:cacheColorHint="#00000000"
                android:fastScrollEnabled="false"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" >
            </ListView>

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/op1"
                        style="@style/FindXButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical|center_horizontal"
                        android:text="Add 1" />

                    <TextView
                        android:id="@+id/op2"
                        style="@style/FindXButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical|center_horizontal"
                        android:text=""
                        android:visibility="gone" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/op3"
                        style="@style/FindXButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical|center_horizontal"
                        android:text=""
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/op4"
                        style="@style/FindXButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical|center_horizontal"
                        android:text=""
                        android:visibility="gone" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/op5"
                        style="@style/FindXButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical|center_horizontal"
                        android:text=""
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/op6"
                        style="@style/FindXButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill_vertical|center_horizontal"
                        android:text=""
                        android:visibility="gone" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/undo"
                style="@style/FindXButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/undo" />

            <Button
                android:id="@+id/restart"
                style="@style/FindXButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart" />

            <Button
                android:id="@+id/give_up"
                style="@style/FindXButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/give_up" />
        </LinearLayout>
    </LinearLayout>

    <it.anddev.tutorial.CustomKeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >
    </it.anddev.tutorial.CustomKeyboardView>

</RelativeLayout>